--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,3 @@
-Robert Fairburn <robert.fairburn@gmail.com>
+Robert Fairburn <robert.fairburn@c2fo.com>
 
 Ideas roughly evolved from https://github.com/saltstack-formulas/nagios-formula and the contributors there.
